--- a/BNRG01/app/src/main/res/layout/activity_quiz.xml
+++ b/BNRG01/app/src/main/res/layout/activity_quiz.xml
@@ -23,10 +23,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
         <Button
+            android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text = "@string/true_button"/>
         <Button
+            android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text = "@string/false_button"/>
