--- a/BNRG01/app/src/main/res/layout-land/activity_quiz.xml
+++ b/BNRG01/app/src/main/res/layout-land/activity_quiz.xml
@@ -33,14 +33,6 @@
         app:layout_constraintTop_toBottomOf="@id/question_text_view"
         app:layout_constraintLeft_toRightOf="@id/true_button"
         app:layout_constraintRight_toRightOf="parent"/>
-    <Button
-        android:id="@+id/cheat_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cheat_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/false_button"/>
 
     <Button
         android:id="@+id/next_button"
@@ -49,8 +41,15 @@
         android:text="@string/next_button"
         android:drawableRight="@drawable/arrow_right"
         android:drawablePadding="4dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cheat_button"/>
-
+        app:layout_constraintTop_toBottomOf="@id/false_button"
+        tools:layout_editor_absoluteX="509dp"
+        android:layout_marginTop="-7dp" />
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button"
+        app:layout_constraintEnd_toStartOf="@id/next_button"
+        app:layout_constraintTop_toBottomOf="@id/false_button"/>
 </android.support.constraint.ConstraintLayout>
