--- a/BNRG07/app/src/main/res/layout/activity_crime.xml
+++ b/BNRG07/app/src/main/res/layout/activity_crime.xml
@@ -7,12 +7,41 @@
     tools:context="com.bnrg.bnrg07.CrimeActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/crime_title_bar"
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/crime_title_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+    
+    <EditText
+        android:id="@+id/crime_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/crime_title_hint"
+        app:layout_constraintTop_toBottomOf="@id/crime_title_bar"/>
+    
+    <TextView
+        android:id="@+id/crime_details"
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/crime_details_label"
+        app:layout_constraintTop_toBottomOf="@id/crime_title"/>
+    
+    <Button
+        android:id="@+id/crime_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/crime_details"/>
+
+    <CheckBox
+        android:id="@+id/crime_solved"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/crime_solved_label"
+        app:layout_constraintTop_toBottomOf="@id/crime_date"/>
 
 </android.support.constraint.ConstraintLayout>
