--- a/BNRG07/app/src/main/res/layout/fragment_crime.xml
+++ b/BNRG07/app/src/main/res/layout/fragment_crime.xml
@@ -49,4 +49,18 @@
     app:layout_constraintTop_toBottomOf="@+id/crime_date"
         tools:layout_editor_absoluteX="8dp" />
 
+    <Button
+        android:id="@+id/crime_suspect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/crime_suspect_text"
+        app:layout_constraintTop_toBottomOf="@+id/crime_solved"/>
+
+    <Button
+        android:id="@+id/crime_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/crime_report_text"
+        app:layout_constraintTop_toBottomOf="@+id/crime_suspect"/>
+
 </android.support.constraint.ConstraintLayout>
