--- a/BNRG07/app/src/main/res/layout/fragment_crime.xml
+++ b/BNRG07/app/src/main/res/layout/fragment_crime.xml
@@ -7,23 +7,43 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp">
 
+    <ImageView
+        android:id="@+id/crime_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <ImageButton
+        android:id="@+id/crime_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/crime_photo"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
     <TextView
-    android:id="@+id/crime_title_bar"
-    style="?android:listSeparatorTextViewStyle"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:text="@string/crime_title_label"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+        android:id="@+id/crime_title_bar"
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/crime_title_label"
+        app:layout_constraintLeft_toRightOf="@+id/crime_photo"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/crime_camera"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-    android:id="@+id/crime_title"
-    android:layout_width="336dp"
-    android:layout_height="wrap_content"
-    android:hint="@string/crime_title_hint"
-    app:layout_constraintTop_toBottomOf="@+id/crime_title_bar"
-        tools:layout_editor_absoluteX="8dp" />
+        android:id="@+id/crime_title"
+        android:layout_width="336dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:hint="@string/crime_title_hint"
+        app:layout_constraintStart_toEndOf="@+id/crime_camera"
+        app:layout_constraintTop_toBottomOf="@+id/crime_title_bar" />
 
     <TextView
     android:id="@+id/crime_details"
@@ -31,7 +51,7 @@
     android:layout_width="336dp"
     android:layout_height="wrap_content"
     android:text="@string/crime_details_label"
-    app:layout_constraintTop_toBottomOf="@+id/crime_title"
+    app:layout_constraintTop_toBottomOf="@+id/crime_camera"
         tools:layout_editor_absoluteX="8dp" />
 
     <Button
