--- a/BeatBox/app/src/main/res/layout/list_item_sound.xml
+++ b/BeatBox/app/src/main/res/layout/list_item_sound.xml
@@ -7,8 +7,10 @@
     </data>
 
     <Button
+        style="@style/BeatBoxButton.Strong"
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:onClick="@{()->viewModel.onButtonClicked()}"
         android:text="@{viewModel.title}"
         tools:text="Sound name"/>
 
