--- a/Locatr/app/src/debug/res/values/google_maps_api.xml
+++ b/Locatr/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBFYVpfsIF7k4MJa3vxDHZDpbmKNS9UPxA</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        AIzaSyBFYVpfsIF7k4MJa3vxDHZDpbmKNS9UPxA</string>
 </resources>
